--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <x-app></x-app>
-<script type="module" src="demo/index.js"></script>
+<script type="module" src="index.js"></script>
 </body>
 
 </html>
