--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
   <title>DEV-APP</title>
 </head>
 <body>
-<x-app></x-app>
+<x-root></x-root>
 <script type="module" src="index.js"></script>
 </body>
 
